# spreadsheet-mcp

./: pyproject.toml
src/spreadsheet_mcp/: server.py  sheets_client.py
