[project]
name = "spreadsheet-mcp"
version = "0.1.0"
description = "MCP Server for Google Sheets - read, write, format cells, create charts, and more"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
spreadsheet-mcp = "spreadsheet_mcp.server:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "ruff>=0.4.0",
    "types-requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spreadsheet_mcp"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["spreadsheet_mcp"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["no-any-return"]
